connectivity-link/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: incident-api
  labels:
    app.kubernetes.io/part-of: incident-api-demo
